[gd_scene load_steps=6 format=3 uid="uid://dm5i3etlvw3s3"]

[ext_resource type="Script" path="res://FightController.gd" id="1_3fvvi"]
[ext_resource type="PackedScene" uid="uid://drejxjrb6er7u" path="res://UI/MinionSelector.tscn" id="2_yg1mp"]
[ext_resource type="Script" path="res://addons/godot_resource_groups/resource_group.gd" id="3_ks6dk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_nfboh"]

[sub_resource type="Resource" id="Resource_l3wp8"]
resource_local_to_scene = true
script = ExtResource("3_ks6dk")
base_folder = "res://Minions/Resources"
includes = Array[String](["*.tres"])
excludes = Array[String]([])
paths = Array[String](["res://Minions/Resources/Tazorback.tres", "res://Minions/Resources/Tigertan.tres"])

[node name="Arena" type="Node2D"]
script = ExtResource("1_3fvvi")

[node name="UI_Extras" type="CanvasLayer" parent="."]
layer = 8
visible = false

[node name="Screen_Tint" type="ColorRect" parent="UI_Extras"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(1, 1, 1, 0.34902)

[node name="Camera" type="Camera2D" parent="."]

[node name="L_Minions" type="Node" parent="."]

[node name="L1" type="Node2D" parent="L_Minions"]
position = Vector2(-136, -128)

[node name="L2" type="Node2D" parent="L_Minions"]
position = Vector2(-512, -128)

[node name="L3" type="Node2D" parent="L_Minions"]
position = Vector2(-512, 96)

[node name="L4" type="Node2D" parent="L_Minions"]
position = Vector2(-136, 104)

[node name="L5" type="Node2D" parent="L_Minions"]
position = Vector2(-336, 0)

[node name="R_Minions" type="Node" parent="."]

[node name="R1" type="Node2D" parent="R_Minions"]
position = Vector2(120, -128)

[node name="R2" type="Node2D" parent="R_Minions"]
position = Vector2(128, 104)

[node name="R3" type="Node2D" parent="R_Minions"]
position = Vector2(480, 104)

[node name="R4" type="Node2D" parent="R_Minions"]
position = Vector2(480, -128)

[node name="R5" type="Node2D" parent="R_Minions"]
position = Vector2(312, 0)

[node name="Divider" type="Sprite2D" parent="."]
position = Vector2(-4.76837e-07, 4.00002)
scale = Vector2(16, 728)
texture = SubResource("CanvasTexture_nfboh")

[node name="MinionSelector" parent="." instance=ExtResource("2_yg1mp")]
layer = 10
minions = SubResource("Resource_l3wp8")

[node name="ComponentManager" type="Node" parent="."]

[node name="Communicator" type="Node" parent="."]
